--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" href="assets/img/favicon.png" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Material Dashboard by Creative Tim</title>
+	<title>Luna Admin Panel</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -28,7 +28,7 @@
 <body>
 	<style>
 		.main-panel > .content {
-			 margin-top: 0;
+			 margin-top: 0px;
 		}
 		.container-fluid{
 			visibility: visible;
@@ -42,6 +42,9 @@
 			-o-transition: all 100ms linear;
 			-ms-transition: all 100ms linear;
 			transition: all 100ms linear;
+		}
+		.nav-pills:not(.nav-pills-icons) > li > a {
+			border-radius: 5px;
 		}
 	</style>
 
@@ -115,12 +118,87 @@
 	    </div>
 
 	    <div class="main-panel">
+
 			<div class="content">
 				<div class="container-fluid hidden" id="page_statistics">
 					Статистика
 				</div>
 				<div class="container-fluid hidden" id="page_pages">
-					Страницы
+					<div class="row">
+						<div class="col-md-8">
+							<div class="card">
+								<div class="card-header" data-background-color="purple">
+									<h4 class="title">Список страниц с контентом сайта</h4>
+									<p class="category">Здесь вы можете найти необходимую страницу, отредактировать ее или добавить новую.</p>
+								</div>
+								<div class="card-content table-responsive">
+									<div class="row">
+										<div class="col-md-12">
+											<button type="submit" class="btn btn-primary btn-sm">Новая страница</button>
+											<button type="submit" class="btn btn-sm">Сбросить фильтр</button>
+										</div>
+									</div>
+									<table class="table">
+										<thead class="text-primary">
+										<th>Путь</th>
+										<th>Название</th>
+										<th>Тип</th>
+										<th>Изменена</th>
+										</thead>
+										<tbody>
+										<tr>
+											<td>Dakota Rice</td>
+											<td>Niger</td>
+											<td>Oud-Turnhout</td>
+											<td class="text-primary">$36,738</td>
+										</tr>
+										</tbody>
+									</table>
+
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="card">
+								<div class="card-header" data-background-color="purple">
+									<h4 class="title">Фильтр списка</h4>
+									<p class="category">Измените фильтр, чтобы увидеть подходящие страницы.</p>
+								</div>
+								<form class="card-content">
+									<form>
+										<div class="row">
+											<div class="col-md-12">
+												<div class="title">
+													<h4>Тип страниц</h4>
+												</div>
+
+												<ul class="nav nav-pills nav-pills-primary" role="tablist" id="pagesPagesTypesList">
+													<!--
+                                                        color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"
+                                                    -->
+													<li style="opacity:0;">
+														<a role="tab" data-toggle="tab">
+															<i class="material-icons">dashboard</i>
+															1
+														</a>
+													</li>
+												</ul>
+											</div>
+											<div class="col-md-12">
+												<div class="title">
+													<h4>Диапазон</h4>
+												</div>
+
+												<div id="sliderRegular" class="slider"></div>
+												<div id="sliderDouble" class="slider slider-info"></div>
+											</div>
+										</div>
+
+									</form>
+								</form>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="container-fluid hidden" id="page_navigation">
 					Навигация
@@ -138,15 +216,6 @@
 					Пользователи
 				</div>
 			</div>
-
-			<script>
-				function switchPage(pageID){
-				    $('.main-panel .content .container-fluid').addClass("hidden");
-				    $('.sidebar-wrapper ul li').removeClass("active");
-				    $('#page_'+pageID).removeClass("hidden");
-				    $('.navigation_'+pageID).addClass("active");
-				}
-			</script>
 
 			<footer class="footer">
 				<div class="container-fluid">
@@ -171,8 +240,73 @@
 
 	<!--   Core JS Files   -->
 	<script src="assets/js/jquery-3.1.0.min.js" type="text/javascript"></script>
+
 	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="assets/js/material.min.js" type="text/javascript"></script>
+
+	<script src="api.js"></script>
+
+
+	<script>
+        var api = new API();
+
+
+        var pageTriggers = [];
+
+        function switchPage(pageID){
+            console.info("Page switched to "+pageID);
+            $('.main-panel .content .container-fluid').addClass("hidden");
+            $('.sidebar-wrapper ul li').removeClass("active");
+            $('#page_'+pageID).removeClass("hidden");
+            $('.navigation_'+pageID).addClass("active");
+            if(typeof pageTriggers[pageID] == "function"){
+                pageTriggers[pageID]();
+            }
+        }
+
+        pageTriggers["pages"] = function(){
+            api.getDatamodelPageTypes(function(succData,failData,e1,e2,e3){
+				var pgsTL = $("#pagesPagesTypesList").html("");
+				if(succData&&!failData){
+                    succData["data"].forEach(function (value, key, array) {
+                        pgsTL.append('<li data-pageid="'+value["id"]+'"><a role="tab" data-toggle="tab" onclick="redrawPagesWithFilters();"><i class="material-icons">'+value["icon"]+'</i>'+value["name"]+'</a></li>');
+					})
+                }else{
+				    console.error("Failed to load Datamodel Page Types",failData,e1,e2,e3);
+				    // TODO : show error
+                }
+			});
+            redrawPagesWithFilters();
+        };
+
+        function redrawPagesWithFilters(){
+            var filter = [];
+            // FIXME this is demo version
+            var activePageType = $("#pagesPagesTypesList .active");
+            if(typeof activePageType.getAttribute == "function"){
+                var typeID = activePageType.getAttribute("data-pageid");
+                if(typeID !== null) filter.push({"type":typeID});
+			}
+            api.getPages(filter,function(succData,failData,e1,e2,e3){
+                console.log(succData,failData,e1,e2,e3);
+            });
+		}
+
+        function loadPageByHASH(){
+            var h = window.location.hash.substring(1);
+            if(h=="statistics"||h=="pages"||h=="navigation"||h=="development"||h=="datamodel"||h=="settings"||h=="users"){
+                switchPage(h);
+            } // TODO analyse subpages
+
+        }
+
+		window.onload = function(){
+			loadPageByHASH();
+		};
+		$(window).on('hashchange', function() {
+			loadPageByHASH();
+		});
+	</script>
 
 	<!--  Charts Plugin -->
 	<script src="assets/js/chartist.min.js"></script>
